[package]
name = "eventbus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dev-dependencies]
traitcast = { path = "../traitcast" }
traitcast-derive = { path = "../traitcast/traitcast-derive" }
di-derive = { path = "../di/di-derive" }
di = { path = "../di" }

