[package]
name = "di-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = {version="1.0.84",features=["full"]}
quote = "1.0.8"


[dev-dependencies]
proc-macro2 = "1.0.36"
di = { path = ".."}
traitcast =  { path = "../../traitcast" }
traitcast-derive= { path = "../../traitcast/traitcast-derive" }

