[package]
name = "di-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = {version="1.0.86",features=["full"]}
quote = "1.0.15"


[dev-dependencies]
proc-macro2 = "1.0.36"
error = { path = "../../error" }
di = { path = ".."}
traitcast =  { path = "../../traitcast" }
traitcast-derive= { path = "../../traitcast/traitcast-derive" }

