[package]
name = "state_machine-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = {version="1.0.86",features=["full"]}
quote = "1.0.15"

error = { path = "../../error" }
state_machine = { path = ".." }

#[dev-dependencies]
proc-macro2 = "1.0.36"